// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-table-view.vue pageNumber 变化 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换data值
    </a>
  </div>
  <div class="root">
    <div class="table" position="static">
      <div class="head" style="top: 0px;">
        <table class="root head-table" sticky-fixed="true" striped="true">
          <colgroup>
            <col width="0">
            <col width="0">
            <col>
            <col width="0">
          </colgroup>
          <thead>
            <tr>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  用户名
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  手机号码
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  地址
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  最近登录时间
                </span>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class="body" sticky-fixed="true">
        <div class="root scrollcview">
          <div class="wrap">
            <div>
              <table class="root" sticky-fixed="true" striped="true">
                <colgroup>
                  <col width="0">
                  <col width="0">
                  <col>
                  <col width="0">
                </colgroup>
                <tbody>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-10</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917905</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-06-07 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-11</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160294</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-03-23 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-12</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127821</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-05-30 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-13</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261227</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-12-23 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-14</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340034</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-07-30 01:32:06</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-15</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917910</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-06-12 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-16</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160299</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-03-28 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-17</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127826</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-06-04 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-18</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261232</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-12-28 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-19</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340039</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-08-04 01:32:06</span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" style="display: none;">
      <div class="line" style="display: none;"></div>
      <div class="mask" style="display: none;"></div>
    </div>
    <nav class="root pagination" size="normal">
      <div class="root sizer" tabindex="0">
        <span>b</span>
        <span style="display: none;">请选择</span>
        <div class style="direction: ltr;" tags-overflow="collapse">
          10条/页
        </div>
        <transition-stub name="fade" style="width: 100%;">
          <div class="root" style="display: none;">
            <div>
              <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                10条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                20条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                50条/页
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
      <a class="item-wrap">
        <i class="item" role="prev"></i>
      </a>
      <a class="item">1</a>
      <a class="item" selected="selected">2</a>
      <a class="item">3</a>
      <a class="item">4</a>
      <a class="item">5</a>
      <a class="item" role="blank">...</a>
      <a class="item">7</a>
      <a class="item">8</a>
      <a class="item-wrap">
        <i class="item" role="next"></i>
      </a>
    </nav>
    <div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue pageNumber 变化 2`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换data值
    </a>
  </div>
  <div class="root">
    <div class="table" position="static">
      <div class="head" style="top: 0px;">
        <table class="root head-table" sticky-fixed="true" striped="true">
          <colgroup>
            <col width="0">
            <col width="0">
            <col>
            <col width="0">
          </colgroup>
          <thead>
            <tr>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  用户名
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  手机号码
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  地址
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  最近登录时间
                </span>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class="body" sticky-fixed="true">
        <div class="root scrollcview">
          <div class="wrap">
            <div>
              <table class="root" sticky-fixed="true" striped="true">
                <colgroup>
                  <col width="0">
                  <col width="0">
                  <col>
                  <col width="0">
                </colgroup>
                <tbody>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-01</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917895</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-05-28 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-11</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160284</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-03-13 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-21</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127811</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-05-20 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-31</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261217</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-12-13 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-41</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340024</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-07-20 01:32:06</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-51</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917900</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-06-02 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-61</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160289</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-03-18 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-71</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127816</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-05-25 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-81</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261222</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-12-18 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-91</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340029</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-07-25 01:32:06</span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" style="display: none;">
      <div class="line" style="display: none;"></div>
      <div class="mask" style="display: none;"></div>
    </div>
    <nav class="root pagination" size="normal">
      <div class="root sizer" tabindex="0">
        <span>b</span>
        <span style="display: none;">请选择</span>
        <div class style="direction: ltr;" tags-overflow="collapse">
          10条/页
        </div>
        <transition-stub name="fade" style="width: 100%;">
          <div class="root" style="display: none;">
            <div>
              <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                10条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                20条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                50条/页
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
      <a class="item-wrap" disabled="disabled">
        <i class="item" role="prev"></i>
      </a>
      <a class="item" selected="selected">1</a>
      <a class="item">2</a>
      <a class="item">3</a>
      <a class="item">4</a>
      <a class="item">5</a>
      <a class="item" role="blank">...</a>
      <a class="item">7</a>
      <a class="item">8</a>
      <a class="item-wrap">
        <i class="item" role="next"></i>
      </a>
    </nav>
    <div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue pageNumber 变化 3`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" id="changelistbutton" tabindex="0" target="_self" vusion-slot-name-edit="text">
      变换data值
    </a>
  </div>
  <div class="root">
    <div class="table" position="static">
      <div class="head" style="top: 0px;">
        <table class="root head-table" sticky-fixed="true" striped="true">
          <colgroup>
            <col width="0">
            <col width="0">
            <col>
            <col width="0">
          </colgroup>
          <thead>
            <tr>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  用户名
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  手机号码
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  地址
                </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                  最近登录时间
                </span>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class="body" sticky-fixed="true">
        <div class="root scrollcview">
          <div class="wrap">
            <div>
              <table class="root" sticky-fixed="true" striped="true">
                <colgroup>
                  <col width="0">
                  <col width="0">
                  <col>
                  <col width="0">
                </colgroup>
                <tbody>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-201</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917915</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-06-17 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-211</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160304</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-04-02 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-221</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127831</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-06-09 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-231</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261237</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-01-02 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-241</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340044</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-08-09 01:32:06</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">张三-251</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18612917920</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-06-22 21:52:11</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">小明-261</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13727160309</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-04-07 22:24:36</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李四-271</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18897127836</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-06-14 15:45:30</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">李华-281</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">18749261242</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2019-01-07 15:48:01</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">王五-291</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">13579340049</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field" vusion-slot-name="cell">2018-08-14 01:32:06</span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div class="root" direction="horizontal">
            <div class="thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
          </div>
          <div class="root" direction="vertical">
            <div class="thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" style="display: none;">
      <div class="line" style="display: none;"></div>
      <div class="mask" style="display: none;"></div>
    </div>
    <nav class="root pagination" size="normal">
      <div class="root sizer" tabindex="0">
        <span>b</span>
        <span style="display: none;">请选择</span>
        <div class style="direction: ltr;" tags-overflow="collapse">
          10条/页
        </div>
        <transition-stub name="fade" style="width: 100%;">
          <div class="root" style="display: none;">
            <div>
              <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                10条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                20条/页
              </div>
              <div class="root" style="direction: ltr;" vusion-slot-name="default">
                50条/页
              </div>
            </div>
          </div>
        </transition-stub>
      </div>
      <a class="item-wrap">
        <i class="item" role="prev"></i>
      </a>
      <a class="item">1</a>
      <a class="item">2</a>
      <a class="item" selected="selected">3</a>
      <a class="item">4</a>
      <a class="item">5</a>
      <a class="item" role="blank">...</a>
      <a class="item">7</a>
      <a class="item">8</a>
      <a class="item-wrap">
        <i class="item" role="next"></i>
      </a>
    </nav>
    <div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;
